--- a/style.css
+++ b/style.css
@@ -27,10 +27,18 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 50px;
+    height: 100%;
+    justify-content: space-evenly;
+}
+
+.container-score {
     color: white;
     display: flex;
     align-items: center;
-    margin-left: 50px;
     font-size: 30px;
     gap: 10px;
     border-radius: 5px;
@@ -40,8 +48,14 @@ body {
         padding: 10px 20px;
 }
 
-p {
-    margin: 0;
+.btn-restart {
+    font-size: 20px;
+    border: 1px solid black;
+    box-shadow: 0px 0px 10px white,
+        0px 0px 10px white inset;
+        padding: 5px 20px;
+        cursor: pointer;
+        border-radius: 5px;
 }
 
 .overlay {
@@ -56,13 +70,35 @@ p {
     background-color: rgba(0, 0, 0, 0.733);
 }
 
-.btn-restart {
+.btn-restart-lost {
     font-size: 40px;
     border-radius: 10px;
-    border: 1px solid white;
-    box-shadow: 0px 0px 10px white,
-        0px 0px 10px white inset;
+    border: 1px solid red;
+    box-shadow: 0px 0px 10px red,
+        0px 0px 10px red inset;
         padding: 10px 20px;
+        cursor: pointer;
+}
+
+.start-game {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.733);
+}
+
+.btn-play {
+    font-size: 40px;
+    border-radius: 10px;
+    border: 1px solid green;
+    box-shadow: 0px 0px 10px green,
+        0px 0px 10px green inset;
+        padding: 10px 30px;
         cursor: pointer;
 }
 
