--- a/style.css
+++ b/style.css
@@ -71,14 +71,42 @@ body {
 }
 
 .btn-restart-lost {
-    font-size: 40px;
-    border-radius: 10px;
-    border: 1px solid red;
-    box-shadow: 0px 0px 10px red,
-        0px 0px 10px red inset;
-        padding: 10px 20px;
-        cursor: pointer;
+    --green: #fd1b1b;
+  font-size: 25px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  position: relative;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 0.3s;
+  line-height: 1.4em;
+  border: 2px solid var(--green);
+  background: linear-gradient(to right, rgba(255, 0, 0, 0.1) 1%, transparent 40%,transparent 60% , rgba(254, 0, 0, 0.1) 100%);
+  color: var(--green);
+  box-shadow: inset 0 0 10px rgba(251, 0, 0, 0.4), 0 0 9px 3px rgba(241, 9, 9, 0.1);
+  cursor: pointer;
 }
+
+.btn-restart-lost:hover {
+    color: #cd0101;
+    box-shadow: inset 0 0 10px rgba(210, 6, 6, 0.6), 0 0 9px 3px rgba(255, 0, 0, 0.2);
+  }
+  
+  .btn-restart-lost:before {
+    content: "";
+    position: absolute;
+    left: -4em;
+    width: 4em;
+    height: 100%;
+    top: 0;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, rgba(190, 8, 8, 0.1) 40%,rgba(201, 7, 7, 0.1) 60% , transparent 100%);
+  }
+  
+  .btn-restart-lost:hover:before {
+    transform: translateX(15em);
+  }
 
 .start-game {
     position: fixed;
@@ -93,14 +121,42 @@ body {
 }
 
 .btn-play {
-    font-size: 40px;
-    border-radius: 10px;
-    border: 1px solid green;
-    box-shadow: 0px 0px 10px green,
-        0px 0px 10px green inset;
-        padding: 10px 30px;
-        cursor: pointer;
+    --green: #1BFD9C;
+  font-size: 25px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  position: relative;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 0.3s;
+  line-height: 1.4em;
+  border: 2px solid var(--green);
+  background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%,transparent 60% , rgba(27, 253, 156, 0.1) 100%);
+  color: var(--green);
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4), 0 0 9px 3px rgba(27, 253, 156, 0.1);
+  cursor: pointer;
 }
+
+.btn-play:hover {
+    color: #82ffc9;
+    box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6), 0 0 9px 3px rgba(27, 253, 156, 0.2);
+  }
+  
+  .btn-play:before {
+    content: "";
+    position: absolute;
+    left: -4em;
+    width: 4em;
+    height: 100%;
+    top: 0;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, rgba(27, 253, 156, 0.1) 40%,rgba(27, 253, 156, 0.1) 60% , transparent 100%);
+  }
+  
+  .btn-play:hover:before {
+    transform: translateX(15em);
+  }
 
 .grid .O {
     background-color: red;
